test/errors/invalid_stream_component_param_value.ecsact
package unknown_comp_param_value;

component UnknownParamValue(stream: huh) {
  f32 a;
}
